composite - sample 1